<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/fname"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fname"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/fname"
        android:ems="10" />

    <TextView
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fname"
        android:layout_marginTop="14dp"
        android:text="@string/lname"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lname"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/lname"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lname"
        android:layout_marginTop="14dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/descr"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/descr"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descr"
        android:layout_marginTop="14dp"
        android:text="@string/height"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/height"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/height"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/height"
        android:layout_marginTop="14dp"
        android:text="@string/weight"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/weight"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/weight"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weight"
        android:layout_marginTop="14dp"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/addr"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/addr"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addr"
        android:layout_marginTop="14dp"
        android:text="@string/phone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/phone"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/phone"
        android:ems="10"
        android:inputType="phone" />

    <RadioGroup
        android:id="@+id/radioGroupWitnessSuspect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/phone"
        android:layout_below="@+id/phone"
        android:layout_marginTop="14dp" >

        <RadioButton
            android:id="@+id/suspect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/suspect" />

        <RadioButton
            android:id="@+id/witness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/witness" />
    </RadioGroup>

    <TextView
        android:id="@+id/statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupWitnessSuspect"
        android:layout_marginTop="14dp"
        android:text="@string/statement"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editStatement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/statement"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/statement"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/statement"
        android:background="@drawable/button_background"
        android:text="@string/audioRecordStatement"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp" />

</RelativeLayout>